--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -18,7 +18,7 @@
 
  #KILIMANJARO EVENT III
  kmm.59.t: "Initial Exchanges"
- kmm.59.d: "Having been able to shake the hand of her idol,  Kilimanjaro steadies herself as her journey continues. Darjeeling has provided Kilimanjaro a Black Prince to ride in on the way to 10 Downing Street Whilst Darjeeling rode in her Churchill. On the way, both Girls passed through the Tower of London. Inside the Tower, many prisoners were shown to Kilimanjaro including Rosehip, imprisoned for a day for her 600th speeding offense. However, another prisoner was show to Kilimanjaro, called Calvin, or as the prisoner described himself as, St. Gloriana Gaming College. Darjeeling stated that she was an important prisoner and that she was under the custody of St. Gloriana due to the evil nature of his crimes. Although a Koala citizen, Calvin was wanted by many schools for child grooming allegations, exposed by a St. Gloriana citizen under the pseudonym OC Gangsta, which led to his apprehension by Koala authorities. Once the rest of the Commonwealth and Saunders had been notified, only St. Gloriana were willing to take such a vile prisoner, such was their supreme confidence in handling criminals. \n\nArriving at 10 Downing Street, Darjeeling and Kilimanjaro sat down for a cup of tea before moving over to Highbury to watch a football match between Woolwich Arsenal and Manchester United FC. Manchester United Ended up winning 8-2. \n\nReturning to 10 Downing Street, Kilimanjaro stated that..."
+ kmm.59.d: "Having been able to shake the hand of her idol,  Kilimanjaro steadies herself as her journey continues. Darjeeling has provided Kilimanjaro a Black Prince to ride in on the way to 10 Downing Street Whilst Darjeeling rode in her Churchill. On the way, both Girls passed through the Tower of London. Inside the Tower, many prisoners were shown to Kilimanjaro including Rosehip, imprisoned for a day for her 600th speeding offense. However, another prisoner was show to Kilimanjaro, called Calvin, or as the prisoner described himself as, St. Gloriana Gaming College. Darjeeling stated that she was an important prisoner and that she was under the custody of St. Gloriana due to the evil nature of her crimes. Although a Koala citizen, Calvin was wanted by many schools for child grooming allegations, exposed by a St. Gloriana citizen under the pseudonym OC Gangsta, which led to her apprehension by Koala authorities. Once the rest of the Commonwealth and Saunders had been notified, only St. Gloriana were willing to take such a vile prisoner, such was their supreme confidence in handling criminals. \n\nArriving at 10 Downing Street, Darjeeling and Kilimanjaro sat down for a cup of tea before moving over to Highbury to watch a football match between Woolwich Arsenal and Manchester United FC. Manchester United Ended up winning 8-2. \n\nReturning to 10 Downing Street, Kilimanjaro stated that..."
  kmm.59.a: "...she had enjoyed today's events."
  kmm.59.b: "...she had enjoyed today's events, but wished to get on to business now."
 
@@ -1473,6 +1473,80 @@
   anz.31.t:0 "[From.GetNameDefCap] rejects annexation"
   anz.31.d:0 "The situation is tense, and the future remains uncertain."
   anz.31.a:0 "We shall see about that!"
+
+### PRAVDA ###
+ pvd.1.title:1 "Invitation to the Communist International"
+ pvd.1.desc:1 "A [Root.GetAdjective] diplomat has recently invited us to join a formal alliance under the banner of the Communist International. Although we have many ideological differences, is it not infeasible to join with them in pursuit of our common goal?"
+ pvd.1.a:1 "Yes, for the working class."
+ pvd.1.b:1 "No, ideological purity comes first!"
+ pvd.3.title:1 "[From.GetAdjective] Tutelage"
+ pvd.3.desc:1 "[Root.GetName] has chosen solidarity with [From.GetNameDef] and now has a government with similar vision. Many in the new government are suggesting that we enter into [Root.GetNameDef]'s protection."
+ pvd.3.a:1 "Set it in motion."
+ pvd.3.b:1 "[Root.GetName] shall remain a sovereign state."
+ pvd.4.t: "[From.GetName] accepts [Root.GetAdjective] tutelage"
+ pvd.4.d: "[From.GetName] has wisely accepted our request to protect them in a more holistic capacity."
+ pvd.4.a: "We will save you from capitalism."
+ pvd.5.t:1 "[From.GetName] resists [Root.GetAdjective] pressure"
+ pvd.5.d:1 "[From.GetName] is resisting our diplomatic pressure for us to have more control of their foreign policy."
+ pvd.5.a:1 "Pity."
+ pvd.33.d:1 "On one hand, the radical Alexandra Kollontai is proposing a social revolution that is targeted against patriarchy, and a left-communist agenda. She is a notable advocate of Free Love. \n\n Nikolai Bukharin was the mastermind behind the New Economic Policy, and she believes a reinstatement of this could be beneficial for the country. \n\n And of course, Nonna, the creator of the Red Army, wants to militarize labour and spread the revolution by force."
+ pvd.33.a:1 "Nonna Leads"
+ pvd.11.d:1 "After the success of our recent cooperation, the Soviets have come to us with an intriguing offer. They propose that we put our differences aside and instead of wasting our strength fighting each other while the western democracies watch and profit, we combine our strength and crush them instead!" 
+ pvd.12.d:1 "The Germans have refused our offer, if we want the industry of Germany we shall have to take them by force!"
+ pvd.14.t:1 "Membership in [Root.GetNameDef]"
+ pvd.14.d:1 "We are under pressure from Moscow to officially join [Root.GetNameDef]. Should we agree to this?
+ pvd.15.t:1 "[From.GetName] Refuses!"
+ pvd.15.d:1 "[From.GetNameDef] has outrageously refused to merge with [Root.GetNameDef]! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
+ pvd.16.t:1 "The Annexation of [From.GetName]"
+ pvd.16.d:1 "The Supreme Soviet has received a formal request from the [From.GetAdjective] parliament for membership in [From.GetNameDef]. They will be organized as the [From.GetAdjective] Autonomous Oblast in the Russian SFSR.
+ pvd.101.t:1 "Coup in [From.GetNameDef]!"
+ pvd.101.d:1 "Mikhail Tukhachevsky, Grigory Zinoviev and Lev Kamenev have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
+ pvd.101.a:1 "Long Live [From.GetNameDef]!"
+ pvd.101.b:1 "Perhaps it is for the better."
+ pvd.101.c:1 "Proof of the instability of the Communist system."
+ pvd.102.t:1 "Anarchist Takeover in [From.GetNameDef]"
+ pvd.102.d:1 "Recently [From.GetNameDef], long dominated by the Red Army, has been taken over by a faction stylizing itself after the Black Army that once controlled a large section of Ukraine, adhering to Anarchist principles. It seems that this new government of [From.GetNameDef] is also following the ideals of Anarchism. \n\n Only time will tell what developments will arise from this revolution."
+ pvd.102.a:1 "Death to all who stand in the way of freedom for the working people!"
+ pvd.102.b:1 "They have come a long way."
+ pvd.102.c:1 "Chaos reigns supreme."
+ pvd.103.t:1 "Legislative Elections held in [From.GetNameDef]"
+ pvd.103.d:1 "Tukhachevsky's §RMilitary§! Government has recently announced that it is conducting legislative elections to the newly re-established All-Union Constituent Assembly. International observers have been invited to verify that the election is free and fair. \n\nA suprising number of political parties have emerged in the post civil-war landscape, and there are sure to be some interesting developments in this election."
+ pvd.103.a:1 "Let the people be heard."
+ pvd.103.b:1 "They have come a long way."
+ pvd.103.c:1 "An unexpected development."
+ pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Tukhachevsky has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Tukhachevsky loyalists have hoisted their banners in revolt against Nonna's new regime."
+ pvd.6.t:1 "Reclaim Karelia"
+ pvd.6.d:1 "Germany has recently offered to help us regain the territory lost to the Russians in exchange for us joining their war. Should we accept?"
+ pvd.6.a:1 "Yes. We will reclaim what is ours!"
+ pvd.6.b:1 "It is too risky."
+ pvd.7.t:1 "Peace with Finland"
+ pvd.7.d:1 "There is no way that Finland can continue the war at its current level. They might be open to peace negotiations. Should we offer a ceasefire?"
+ pvd.7.a:1 "Let us have peace."
+ pvd.7.b:1 "Those Finns will pay for Leningrad in blood!"
+ pvd.8.t:1 "[From.GetName] offers ceasefire"
+ pvd.8.d:1 "The [From.GetAdjective] have offered to end the war in exchange for a few territorial concessions. Should we accept?"
+ pvd.8.a:1 "Let us have peace."
+ pvd.8.b:1 "No, we cannot abandon our allies."
+ pvd.9.t:1 "The Finns accept"
+ pvd.9.d:1 "The Finns have accepted our generous peace offer."
+ pvd.9.a:1 "Good."
+ pvd.10.t:1 "The Finns refuse"
+ pvd.10.d:1 "The Finns have rejected our generous peace offer. The war continues."
+ pvd.10.a:1 "Their loss."
+ pvd.21.t:1 "Italian Civil War"
+ pvd.21.d:1 "Bolstered by the capture of Italian mainland territories by the allies, Anti-Fascist resistance movements have risen up against our government. Sir Pietro Badoglio suggests that we side with them and join the Allies against Mussolini's wishes."
+ pvd.21.a:1 "Viva la Resistenza!"
+ pvd.21.b:1 "Viva Mussolini!"
+ pvd.28.d:1 "The world may never know if Tukhachevsky was right to unseat Katyusha, or whether she made more enemies by ending the purges of the Red Army. What is known is that what she feared eventually came to pass. Today, Nonna reemerged as having returned from her exile, and with the support of several influential party members and NKVD officers, launched a coup overthrowing Tukhachevsky's rule.\n\nThe former Marshal was attacked in her home with an ice axe, and was swiftly executed along with several of her supporters. Tearing down the militaristic state she built up will take time, but the people know now at least that she was not infallible.\n\n One of the few survivors who managed to escape was Ivan Konev. The fierce supporter of Katyusha has managed to gather some support and declared war on the Nonna government, in an attempt to take back power and 'fulfill the vision of Comrade Tukhachevsky'."
+ pvd.29.t:1 "Constitutional Convention - Religion in the State"
+ pvd.29.d:1 "Our New State has an undetermined policy towards religion. While the former government was anti-religious, many clamour for a return of the days where the Church had a greater say in politics."
+ pvd.30.t:1 "Constitutional Convention - Economic System"
+ pvd.30.d:1 "Socialism remains very popular among the people of Russia. Should we continue this course, or adopt a more moderate policy? The fascists have also been gaining popularity with their corporatist economic programme."
+ pvd.31.t:1 "Constitutional Convention - Policy of the Nationalities"
+ pvd.31.d:1 "Many nationalitites have been agitating for greater independence or autonomy. However, the status of Russians in the state has traditionally been enshrined as superior. Which policy should we choose?"
+ pvd.22.t:1 "The End of Nazism"
+ pvd.22.d:1 "Our underground networks are mobilising. We will put the Fascist menace down for once and for all! For Germany!"
+ pvd.22.a:1 "Deutschland Uber Alles!"
  
  ## SCHIZO ##
  
@@ -1486,7 +1560,7 @@
  sdf.2.a:0 "To the North!"
  
  sdf.7.t:0 "From Zhongguo to Kurmormine"
- sdf.7.d:0 "The cold breeze flows through the shuddering trees as in the distance thunderous applause met with a wonderful show of lights, tremendous blaze one would say as the village burned like a raging campfire. \n \n The dozen or so soldiers on either side of her all brought up ammunition loading their rifles as she slides another bullet into her Mauser Tankgewehr, two burnt out armoured cars sat burning some 400 yards away, not since Zhongguo had she seen combat, and yet here she was fighting her fellow countrymen when they could be fighting their true enemy Pravda. \n \n I find myself constantly looking over at one over eager cadet whom was just 16 but had seemed to be the only one thrilled to serve in this war, he drops yet another box of ammunition before she brings herself to tell him. \n 'Wenn die eigentliche Schlacht beginnt, lauf zurück zum Bataillon' \n \n He did seem a tad disappointed but a pat on the helmet made him nod shyly before I send him back on his way to grab yet more ammunition, I return to my duty watching for tanks as I find myself sighing before saying. \n 'Hoffen wir, dass meine Kinder sich nicht mit ihren Klassenkameraden streiten müssen'"
+ sdf.7.d:0 "The cold breeze flows through the shuddering trees as in the distance thunderous applause met with a wonderful show of lights, tremendous blaze one would say as the village burned like a raging campfire. \n \n The dozen or so soldiers on either side of her all brought up ammunition loading their rifles as she slides another bullet into her Mauser Tankgewehr, two burnt out armoured cars sat burning some 400 yards away, not since Zhongguo had she seen combat, and yet here she was fighting her fellow countrymen when they could be fighting their true enemy Pravda. \n \n I find myself constantly looking over at one over eager cadet whom was just 16 but had seemed to be the only one thrilled to serve in this war, she drops yet another box of ammunition before she brings herself to tell her. \n 'Wenn die eigentliche Schlacht beginnt, lauf zurück zum Bataillon' \n \n she did seem a tad disappointed but a pat on the helmet made her nod shyly before I send her back on her way to grab yet more ammunition, I return to my duty watching for tanks as I find myself sighing before saying. \n 'Hoffen wir, dass meine Kinder sich nicht mit ihren Klassenkameraden streiten müssen'"
  sdf.7.a:0 "All is fair in Love and War"
  
  sdf.8.t:0 "Berlin Seized"
