--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2892,6 +2892,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ##CUSTOM EFFECT TOOLTIPS##
   SDF_decisions_units:0 "§CUnlocks Decisions to Raise Units Across South Kuromorimine§!"
   SDF_coring_focus:0 "§CUnlocks Decisions to Core States§!"
+  SDF_send_in_SDK:0 "§RThis can't go well§!"
   
   ##TRAITS##
   SDF_saori_takebe:0 "Heerfuhrer Saori Takebe"
@@ -2994,26 +2995,26 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
 
   ##POST CIVIL WAR##
   SDF_victory_civil:0 "Victory for Kuromorimine!"
-  SDF_victory_civil_desc:0 ""
+  SDF_victory_civil_desc:0 "As the sun rises on a new chapter of Kuromorimine’s history, we must choose its crowning jewel. The question remains: over what capital shall the banner of Kuromormine ascend, to begin this new government’s new reign?"
   SDF_dotted_line_report:0 "Dotted Line Report"
   SDF_dotted_line_report_desc:0 ""
   SDF_anarchy_issue:0 "A Country in Need"
-  SDF_anarchy_issue_desc:0 ""
+  SDF_anarchy_issue_desc:0 "With the country in need, we must perform our noble deed, of reducing the nation’s vices, and the anarchy that be. \n \nWe must get a grip on the situation before us, and weigh the options to make the people adore us. "
   SDF_where_to:0 "Who to Rein In?"
   SDF_where_to_desc:0 ""
   SDF_east_priority:0 "Eastern Kuromorimine"
-  SDF_east_priority_desc:0 ""
+  SDF_east_priority_desc:0 "With a famed cultural history, the East shall be the new point of development. Cultural Centers in Leipzig, manufacturing titans in Desden, and a new National Capital Region centered on Berlin shall be the masterpieces of this project."
   SDF_west_priority:0 "Western Heartlands"
-  SDF_west_priority_desc:0 ""
+  SDF_west_priority_desc:0 "The Western part of Kuromormine has always been an economic powerhouse. Further investment shall spur its growth, spreading its bounty across our nation."
   SDF_unban_unions:0 "Unban the Unions"
-  SDF_unban_unions_desc:0 ""
+  SDF_unban_unions_desc:0 "The Workers Union act of 1935 did a great deal of damage to the unions that once held significant influence over the working class and its power over the state, though we can’t allow a unmonitored union to act outside the government we can provide the appearance of freeing the unions whilst ensuring total control over what unions are allowed."
   SDF_workers_rights:0 "Loyal Worker Rights"
-  SDF_workers_rights_desc:0 ""
+  SDF_workers_rights_desc:0 "Loyalty to the party is loyalty to the state, that is the philosophy all shall follow from now on, workers that refuse to march in lockstep to our drums will not be favoured but scorned whilst those that bow to our will shall recieve both milk and honey for their duty to the fatherland."
   SDF_send_SDK:0 "Send in the SDK"
-  SDF_send_SDK_desc:0 ""
+  SDF_send_SDK_desc:0 "Despite our victory conventionally, we must now turn our gaze on the people of Kuromormine who may still hold loyalty to the old ways or even those that will oppose the great crusade we will undertake. \n \nThe Army shall deal with these individuals like all others and make the streets run red with traitors blood, just like the friekorps of old we shall follow their glorious example in purging the nation of traitors."
   SDF_democratic_fascism:0 "Implement Takebeism"
   SDF_democratic_fascism_desc:0 ""
   SDF_peoples_representation:0 "Student Representation"
-  SDF_peoples_representation_desc:0 ""
+  SDF_peoples_representation_desc:0 "With Kuromormine Democracy finally enacted, our great nation stands on the edge of greatness for our nations future, though to ensure our nation does not fall back into the same degeneracy of the old we must devolve some power to elected officials albeit in a limited capacity, as to allow any one state to have power over the central government would only allow the enemies of the Reich to infiltrate our great nations domestic institutions."
   SDF_sort_of_stability:0 "Some Sort of Stability"
   SDF_sort_of_stability_desc:0 ""
