second branch done + icons
fortnite battle pass, why are you reading the description

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2893,6 +2893,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_decisions_units:0 "§CUnlocks Decisions to Raise Units Across South Kuromorimine§!"
   SDF_coring_focus:0 "§CUnlocks Decisions to Core States§!"
   SDF_send_in_SDK:0 "§RThis can't go well§!"
+  SDF_ooarai_penal:0 "§CSpawns§! §R3§! §COoarai Worker Battalions in Vienna§!"
   
   ##TRAITS##
   SDF_saori_takebe:0 "Heerfuhrer Saori Takebe"
@@ -2923,6 +2924,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_unions_2:0 "Loyal Workers and Unions"
   sdf_takebeism:0 "Party Serves the People!"
   sdf_student_representation:0 "Student Representation"
+  sdf_ooarai_gold:0 "Ooarai Gold"
+  sdf_explotiing_resource:0 "Ooarai Riches"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -3018,3 +3021,20 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_peoples_representation_desc:0 "With Kuromormine Democracy finally enacted, our great nation stands on the edge of greatness for our nations future, though to ensure our nation does not fall back into the same degeneracy of the old we must devolve some power to elected officials albeit in a limited capacity, as to allow any one state to have power over the central government would only allow the enemies of the Reich to infiltrate our great nations domestic institutions."
   SDF_sort_of_stability:0 "Some Sort of Stability"
   SDF_sort_of_stability_desc:0 ""
+  
+  SDF_ooarai_issue:0 "Ooarai Debate"
+  SDF_ooarai_issue_desc:0 ""
+  SDF_steal_gold:0 "'Repurposing' Ooarai Gold"
+  SDF_steal_gold_desc:0 ""
+  SDF_disarm_ooarai:0 "Disarm the Resistance"
+  SDF_disarm_ooarai_desc:0 ""
+  SDF_trail_of_4:0 "Trial of Four"
+  SDF_trail_of_4_desc:0 ""
+  SDF_exploiting_ooarai:0 "Exploting Ooarai's Resources"
+  SDF_exploiting_ooarai_desc:0 ""
+  SDF_penal_battalions:0 "Arbeiter Todesabteilung"
+  SDF_penal_battalions_desc:0 ""
+  SDF_industrial_stealing:0 "Stealing the Major Industies"
+  SDF_industrial_stealing_desc:0 ""
+  SDF_ooarai_core:0 "Reichskommissariat Ooarai"
+  SDF_ooarai_core_desc:0 ""
