--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2636,7 +2636,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_defend_poland:1 "Defend Poland"
  SOV_defend_poland_desc:1 "Our strategy worked against the Germans in Czechoslovakia, and now we are prepared to do the same in Poland."
  had_yalta_conference:1 "The Yalta Conference has happened"
- SOV_tukhachevsky_coup:1 "Tukhachevsky's Coup"
+ SOV_tukhachevsky_coup:1 "Klara's Coup"
  SOV_tukhachevsky_coup_desc:1 "Katyusha has gone mad with power and must be stopped. Tukhachevsky and other sympathetic officers are planning a coup to put an end to this deranged tyrant's reign."
  SOV_neutrality_party_tukhachevsky:1 "Workers' and Peasants' Red Army"
  SOV_neutrality_party_anarchism_long:1 "Revolutionary Insurrectionary Army"
