--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2894,6 +2894,9 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_coring_focus:0 "§CUnlocks Decisions to Core States§!"
   SDF_send_in_SDK:0 "§RThis can't go well§!"
   SDF_ooarai_penal:0 "§CSpawns§! §R3§! §COoarai Worker Battalions in Vienna§!"
+  SDF_failing_loyalty4:0 "§RThe Military is Marching on Berlin§!"
+  SDF_no_going_back:0 "The Army is §RRebeling§!"
+
   
   ##TRAITS##
   SDF_saori_takebe:0 "Heerfuhrer Saori Takebe"
@@ -2920,12 +2923,18 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_anarchy_2:0 "Anarchy:§O Getting a Grip§!"
   sdf_anarchy_1:0 "Anarchy:§O The Worst is Over§!"
   sdf_failing_loyalty:0 "Army Loyalty:§O Skeptical§!" 
+  sdf_failing_loyalty2:0 "Army Loyalty:§O Failing§!"
+  sdf_failing_loyalty3:0 "Army Loyalty:§O Plotting?§!"
+  sdf_failing_loyalty4:0 "Army Loyalty:§R Rebeling§!"
   sdf_unions_1:0 "Unbanned Unions"
   sdf_unions_2:0 "Loyal Workers and Unions"
   sdf_takebeism:0 "Party Serves the People!"
   sdf_student_representation:0 "Student Representation"
   sdf_ooarai_gold:0 "Ooarai Gold"
   sdf_explotiing_resource:0 "Ooarai Riches"
+  sdf_elevate_fallshimjager:0 "Elite Fallschirmjäger"
+  sdf_keep_nishizumists:0 "Cult of the Nishizumists"
+  sdf_war_games:0 "War Games"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -3038,3 +3047,23 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_industrial_stealing_desc:0 ""
   SDF_ooarai_core:0 "Reichskommissariat Ooarai"
   SDF_ooarai_core_desc:0 ""
+  
+  SDF_reign_military:0 "Reign in the SDK"
+  SDF_reign_military_desc:0 ""
+  SDF_power_struggle:0 "The Great Game"
+  SDF_power_struggle_desc:0 ""
+  SDF_keep_nishizumists:0 "The Old Guard's Grasp"
+  SDF_keep_nishizumists_desc:0 ""
+  SDF_purge_generals:0 "A Reformed SDK"
+  SDF_reinstate_KS:0 "Reinstate the Kurostaffel"
+  SDF_reinstate_KS_desc:0 ""
+  SDF_ratne_igre:0 "Ratne Igre"
+  SDF_ratne_igre_desc:0 ""
+  SDF_elevate_fallshimjager:0 "Elevate the Fallschirmjäger"
+  SDF_elevate_fallshimjager_desc:0 ""
+  SDF_fallshimpanzers:0 "1st Fallschirm-Panzer 'Gepanzerter Speer'"
+  SDF_fallshimpanzers_desc:0 ""
+  SDF_coup_government:0 "SDK Coup"
+  SDF_coup_government_desc:0 ""
+  SDF_heer_no_fear:0 "The Heer shall Know no Fear!"
+  SDF_heer_no_fear_desc:0 ""
