--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2896,6 +2896,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_ooarai_penal:0 "§CSpawns§! §R3§! §COoarai Worker Battalions in Vienna§!"
   SDF_failing_loyalty4:0 "§RThe Military is Marching on Berlin§!"
   SDF_no_going_back:0 "The Army is §RRebeling§!"
+  SDF_economics_decline:0 "§RWithout action by the Fuhrerin we are slipping in a economic decline§!"
 
   
   ##TRAITS##
@@ -2935,6 +2936,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_elevate_fallshimjager:0 "Elite Fallschirmjäger"
   sdf_keep_nishizumists:0 "Cult of the Nishizumists"
   sdf_war_games:0 "War Games"
+  sdf_army_purge:0 "Right Wing Army Purges"
+  sdf_reinstate_ks:0 "Reinstated Kurostaffel"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -3009,11 +3012,11 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_victory_civil:0 "Victory for Kuromorimine!"
   SDF_victory_civil_desc:0 "As the sun rises on a new chapter of Kuromorimine’s history, we must choose its crowning jewel. The question remains: over what capital shall the banner of Kuromormine ascend, to begin this new government’s new reign?"
   SDF_dotted_line_report:0 "Dotted Line Report"
-  SDF_dotted_line_report_desc:0 ""
+  SDF_dotted_line_report_desc:0 "A dot. A line. A simple dotted line. For the information the government receives comes only in dots and lines, one by one, piece by piece, never complete. Yet without it, how shall we know what dreary state that nation is in?"
   SDF_anarchy_issue:0 "A Country in Need"
   SDF_anarchy_issue_desc:0 "With the country in need, we must perform our noble deed, of reducing the nation’s vices, and the anarchy that be. \n \nWe must get a grip on the situation before us, and weigh the options to make the people adore us. "
   SDF_where_to:0 "Who to Rein In?"
-  SDF_where_to_desc:0 ""
+  SDF_where_to_desc:0 "The choice of our nation’s development has always been a tenacious topic. To build the West, our nation’s economic base, or to build the east, the land of our culture?"
   SDF_east_priority:0 "Eastern Kuromorimine"
   SDF_east_priority_desc:0 "With a famed cultural history, the East shall be the new point of development. Cultural Centers in Leipzig, manufacturing titans in Desden, and a new National Capital Region centered on Berlin shall be the masterpieces of this project."
   SDF_west_priority:0 "Western Heartlands"
