shit ton of bugfixes and balancing

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1591,14 +1591,15 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  NOR_reichskommissariat_DEF: "Reichskommissariat für die besetzten norwegischen Gebiete"
  NOR_reichskommissariat_ADJ: "Norwegian"
 
- greater_denmark_democratic: "Store Danske Republik"
- greater_denmark_democratic_DEF: "the Store Danske Republik"
- greater_denmark_communism: "Nordgermanske Folkerepublik"
- greater_denmark_communism_DEF: "the Nordgermanske Folkerepublik"
- greater_denmark_neutrality: "Danske Storrige"
- greater_denmark_neutrality_DEF: "the Danske Storrige"
- greater_denmark_fascism: "Danske Enevælde"
- greater_denmark_fascism_DEF: "the Danske Enevælde"
+ DEN_greater_denmark: "Greater Denmark"
+ DEN_greater_denmark_democratic: "Store Danske Republik"
+ DEN_greater_denmark_democratic_DEF: "the Store Danske Republik"
+ DEN_greater_denmark_communism: "Nordgermanske Folkerepublik"
+ DEN_greater_denmark_communism_DEF: "the Nordgermanske Folkerepublik"
+ DEN_greater_denmark_neutrality: "Danske Storrige"
+ DEN_greater_denmark_neutrality_DEF: "the Danske Storrige"
+ DEN_greater_denmark_fascism: "Danske Enevælde"
+ DEN_greater_denmark_fascism_DEF: "the Danske Enevælde"
 
  DEN_imperial: "Danish Realm"
  DEN_imperial_democratic: "Baltic Sea Republic"
