--- a/localisation/english/wtt_focus_l_english.yml
+++ b/localisation/english/wtt_focus_l_english.yml
@@ -642,13 +642,13 @@
  JAP_torpedo_cruisers_desc:0 "We will dedicate a whole class of ships to carrying huge numbers of our new torpedoes, enabling them to wreak havoc to the enemy fleet."
  JAP_yamato_tt:1 "Adds two §YYamato-Class§! Super-Heavy Battleship production lines, at 75% and 50% complete, respectively."
  cost_reduced_last_stand:1 "Allows the use of the §YLast Stand§! command ability at greatly reduced cost.\n"
- MAN_pacify_the_countryside: "Pacify the Delinquents"
- MAN_pacify_the_countryside_desc: "A serious problem has occured in the lands of Manchuria with regards to banditry. Our forces must now push efforts in to disciplining these delinquents once and for all. Commence Sakusen 1936!"
- MAN_pacify_the_countryside_effect_tooltip: "Keep troops in certain states to neutralize delinquents in the countryside.\n"
- MAN_army_modernization: "Army Modernization"
- MAN_army_modernization_desc: "Our Army is both small and outdated. Given our available resources, this is unacceptable. We must be able to pull our weight for Chi-Ha-Tan and beyond!."
- MAN_mukden_military_academy: "Mukden Military Academy"
- MAN_mukden_military_academy_desc: "Our army needs good and loyal officers to lead it if we ever want to rely on more than just mass to achieve our objectives."
+ MAN_pacify_the_countryside:0 "Pacify the Delinquents"
+ MAN_pacify_the_countryside_desc:0 "A serious problem has occured in the lands of Manchuria with regards to banditry. Our forces must now push efforts in to disciplining these delinquents once and for all. Commence Sakusen 1936!"
+ MAN_pacify_the_countryside_effect_tooltip:0 "Keep troops in certain states to neutralize delinquents in the countryside.\n"
+ MAN_army_modernization:0 "Army Modernization"
+ MAN_army_modernization_desc:0 "Our Army is both small and outdated. Given our available resources, this is unacceptable. We must be able to pull our weight for Chi-Ha-Tan and beyond!."
+ MAN_mukden_military_academy:0 "Mukden Military Academy"
+ MAN_mukden_military_academy_desc:0 "Our army needs good and loyal officers to lead it if we ever want to rely on more than just mass to achieve our objectives."
  MAN_invite_japanese_settlers:0 "Invite [JAP.GetAdjective] Students"
  MAN_invite_japanese_settlers_desc:0 "We have far more space than we have people. Large areas of the country remain essentially wilderness. We should settle people in these areas to form new communities and allow for more economical development."
  MAN_collective_farms:0 "Collective Farms"
