--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -1500,7 +1500,7 @@
  pvd.16.t:1 "The Annexation of [From.GetName]"
  pvd.16.d:1 "The Supreme Soviet has received a formal request from the [From.GetAdjective] parliament for membership in [From.GetNameDef]. They will be organized as the [From.GetAdjective] Autonomous Oblast in the Russian SFSR.
  pvd.101.t:1 "Coup in [From.GetNameDef]!"
- pvd.101.d:1 "Mikhail Tukhachevsky, Grigory Zinoviev and Lev Kamenev have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
+ pvd.101.d:1 "Klara have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
  pvd.101.a:1 "Long Live [From.GetNameDef]!"
  pvd.101.b:1 "Perhaps it is for the better."
  pvd.101.c:1 "Proof of the instability of the Communist system."
@@ -1510,11 +1510,11 @@
  pvd.102.b:1 "They have come a long way."
  pvd.102.c:1 "Chaos reigns supreme."
  pvd.103.t:1 "Legislative Elections held in [From.GetNameDef]"
- pvd.103.d:1 "Tukhachevsky's §RMilitary§! Government has recently announced that it is conducting legislative elections to the newly re-established All-Union Constituent Assembly. International observers have been invited to verify that the election is free and fair. \n\nA suprising number of political parties have emerged in the post civil-war landscape, and there are sure to be some interesting developments in this election."
+ pvd.103.d:1 "Klara's §RMilitary§! Government has recently announced that it is conducting legislative elections to the newly re-established All-Union Constituent Assembly. International observers have been invited to verify that the election is free and fair. \n\nA suprising number of political parties have emerged in the post civil-war landscape, and there are sure to be some interesting developments in this election."
  pvd.103.a:1 "Let the people be heard."
  pvd.103.b:1 "They have come a long way."
  pvd.103.c:1 "An unexpected development."
- pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Tukhachevsky has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Tukhachevsky loyalists have hoisted their banners in revolt against Nonna's new regime."
+ pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Klara has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Klara loyalists have hoisted their banners in revolt against Nonna's new regime."
  pvd.6.t:1 "Reclaim Karelia"
  pvd.6.d:1 "Germany has recently offered to help us regain the territory lost to the Russians in exchange for us joining their war. Should we accept?"
  pvd.6.a:1 "Yes. We will reclaim what is ours!"
@@ -1537,7 +1537,7 @@
  pvd.21.d:1 "Bolstered by the capture of Italian mainland territories by the allies, Anti-Fascist resistance movements have risen up against our government. Sir Pietro Badoglio suggests that we side with them and join the Allies against Mussolini's wishes."
  pvd.21.a:1 "Viva la Resistenza!"
  pvd.21.b:1 "Viva Mussolini!"
- pvd.28.d:1 "The world may never know if Tukhachevsky was right to unseat Katyusha, or whether she made more enemies by ending the purges of the Red Army. What is known is that what she feared eventually came to pass. Today, Nonna reemerged as having returned from her exile, and with the support of several influential party members and NKVD officers, launched a coup overthrowing Tukhachevsky's rule.\n\nThe former Marshal was attacked in her home with an ice axe, and was swiftly executed along with several of her supporters. Tearing down the militaristic state she built up will take time, but the people know now at least that she was not infallible.\n\n One of the few survivors who managed to escape was Ivan Konev. The fierce supporter of Katyusha has managed to gather some support and declared war on the Nonna government, in an attempt to take back power and 'fulfill the vision of Comrade Tukhachevsky'."
+ pvd.28.d:1 "The world may never know if Klara was right to unseat Katyusha, or whether she made more enemies by ending the purges of the Red Army. What is known is that what she feared eventually came to pass. Today, Nonna reemerged as having returned from her exile, and with the support of several influential party members and NKVD officers, launched a coup overthrowing Klara's rule.\n\nThe former Marshal was attacked in her home with an ice axe, and was swiftly executed along with several of her supporters. Tearing down the militaristic state she built up will take time, but the people know now at least that she was not infallible.\n\n One of the few survivors who managed to escape was Ivan Konev. The fierce supporter of Katyusha has managed to gather some support and declared war on the Nonna government, in an attempt to take back power and 'fulfill the vision of Comrade Klara'."
  pvd.29.t:1 "Constitutional Convention - Religion in the State"
  pvd.29.d:1 "Our New State has an undetermined policy towards religion. While the former government was anti-religious, many clamour for a return of the days where the Church had a greater say in politics."
  pvd.30.t:1 "Constitutional Convention - Economic System"
