--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -692,7 +692,7 @@
  stiff_upper_lip_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my son. "
  trotskyite_plot:0 "Trotskyite Plot?"
  trotskyite_plot_desc:0 "Paranoia and pathological distrust stemming from old power struggles impact the leadership of this nation."
- trotskyite_plot_purged:0 "Trotskyite Plot Purged?"
+ trotskyite_plot_purged:0 "Nonna Plot Purged?"
  trotskyite_plot_purged_desc:0 "Despite the purges, the fear of betrayal remains."
  officers_purged:0 "Officers Purged"
  officers_purged_desc:0 "The purge of the 'fifth columnists' has left great scars in the ranks of the red army officers, and it will take years for the leadership to replenish itself."
